--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -6,11 +6,11 @@ title: Recipeasy
 <header class="page-header">
   <div class="header-text">
     <h1>Cross “Create an E-Book” off your to-do list</h1>
-    <a href="#" class="button-primary">Get Started</a>
+    <a href="#intro" class="button-primary scroll-link">Get Started</a>
   </div>
 </header>
 
-<section class="intro-container">
+<section class="intro-container" id="intro">
   <img src="images/sample-book.png">
   <div class="intro-text">
     <h2>Recipeasy designs E-Books for Food Bloggers</h2>
@@ -23,8 +23,8 @@ title: Recipeasy
 </section>
 
 <section class="about-blocks" id="about">
-  <div class="about-text">
-    <div class="text-block">
+  <div class="text-block">
+    <div class="text-block-content">
       <h2>Food for thought</h2>
       <p>Have you been wanting to create an E-Book for some time now? Let us guess, you may have even tried to create one yourself. Maybe with Photoshop, Keynote, or Word? Ugh, the struggle is real. Even with templates, it’s hard to know where to start. More importantly, you don’t have the time to think about the whole e-book design. That’s why we are here to help.</p>
       <p>Our dedicated design professionals help you create perfect E-Books to be used on your site. We specialize in the “sign-up-for-my-email-list-and-get-my-free-ebook” kind of E-Book. Quick. Fresh. And easy. It’s Recipeasy.</p>
@@ -32,7 +32,6 @@ title: Recipeasy
   </div>
   <div class="image-block"></div>
 </section>
-
 
 <section class="testimonial-container" id="testimonials">
   <h2 class="centered-header">Our customers think we are a healthy serving of awesomeness!</h2>
@@ -46,14 +45,12 @@ title: Recipeasy
   </cite>
 </section>
 
-
-
 <section class="about-blocks pricing-blocks" id="pricing">
   <div class="image-block"></div>
-  <div class="about-text">
-    <div class="text-block">
+  <div class="text-block">
+    <div class="text-block-content">
       <h2>Simple Pricing</h2>
-      <h2>$59 <span>/ Setup + $1 per recipe</span></h2>
+      <h4>$59 <span>/ Setup + $1 per recipe</span></h4>
       <ul>
         <li>Choice of portrait or landscape layout</li>
         <li>Cover, Table of Contents, and an About page</li>
@@ -67,6 +64,6 @@ title: Recipeasy
 
 <section class="contact-container" id="contact">
   <h2 class="centered-header">Let’s get this dinner party started</h2>
-  <p>Contact us to schedule a quick call. Email <a href="mailto:recipeasybooks@gmail.com">recipeasybooks@gmail.com</a></p>
+  <p>Contact us to schedule a quick call. Email <a href="mailto:recipeasybooks@gmail.com">recipeasybooks@gmail.com.</a></p>
   <a href="mailto:recipeasybooks@gmail.com" class="button-primary">Contact Us</a>
 </section>
