--- a/source/partials/_footer.html.erb
+++ b/source/partials/_footer.html.erb
@@ -1,9 +1,9 @@
 <footer class="page-footer">
   <div class="footer-container">
     <div class="social-media">
-      <li><a href="#"><i class="twitter-small"></i></a></li>
-      <li><a href="#"><i class="pinterest-small"></i></a></li>
-      <li><a href="#"><i class="email-small"></i></a></li>
+      <li><a href="https://twitter.com/recipeasybooks"><i class="twitter-small"></i></a></li>
+      <!--<li><a href="#"><i class="pinterest-small"></i></a></li>-->
+      <li><a href="mailto:recipeasybooks@gmail.com"><i class="email-small"></i></a></li>
     </div>
     <p>©<%= Time.now.year %> Recipeasy. All Rights Reserved.</p>
     <p><em>A LaunchPad Lab Product.</em></p>
