--- a/source/stylesheets/base/_typography.scss
+++ b/source/stylesheets/base/_typography.scss
@@ -22,8 +22,8 @@ h4,
 h5,
 h6 {
   font-style: normal;
-  font-weight: normal;
-  @include font-type($primary-sans-serif, normal, $light);
+  font-weight: $bold;
+  @include font-type($primary-sans-serif, normal, $regular);
   @include rem(margin-bottom, 12px);
   color: $black-base;
   text-rendering: optimizeLegibility;
@@ -31,7 +31,7 @@ h6 {
   letter-spacing: 1px;
   line-height: 1.1;
 
-  @include media($tablet){ letter-spacing: 2px; }
+  @include media($tablet){ letter-spacing: 2px; font-weight: $light; }
 }
 
 h1 { font-size: $font-size-base * 1.75; @include media($tablet){ font-size: $font-size-base * 4; } }
@@ -44,6 +44,10 @@ h6 { font-size: $font-size-base - 2.00; @include media($tablet){ font-size: $fon
 h3, h4, h5{
   @include font-type($primary-sans-serif, normal, 700);
   letter-spacing: 2px;
+}
+
+h2{
+  @include rem(margin-bottom, 20px);
 }
 
 p {
