--- a/source/stylesheets/components/_navigation.scss
+++ b/source/stylesheets/components/_navigation.scss
@@ -6,7 +6,7 @@ $desktop-nav-height: 83px;
 .navigation {
 
   &.active{
-    background-color: rgba(50, 50, 50, 0.7);
+    background-color: $grey-dark;
   }
 
   .navigation-container{
@@ -51,6 +51,7 @@ Primary Nav
     @include rem(margin, 0 0 0 15px);
     text-transform: uppercase;
     vertical-align: -webkit-baseline-middle;
+    text-shadow: -1px -1px 2px rgba(0, 0, 0, 0.15);
 
     a{
       color: $white-base;
