--- a/source/stylesheets/pages/_home.scss
+++ b/source/stylesheets/pages/_home.scss
@@ -10,14 +10,38 @@
   @include rem(margin-bottom, 50px);
 }
 
+.image-block{
+  height: 300px;
+  width: 100%;
+
+  @include media($tablet){
+    float: left;
+    height: 100%;
+    width: 40%;
+  }
+
+  @include media($tablet-landscape) {
+    width: 50%;
+  }
+}
+
+.text-block-content{
+  @include media($tablet){
+    @include vertical-horizontal-center;
+    width: 75%;
+  }
+}
+
 /*-----------------------
 Intro
 -----------------------*/
 .intro-container{
   position: relative;
+  padding-top: 0px;
 
   img{
     @include rem(margin-bottom, 30px);
+
     @include media($tablet){
       @include span-columns(5.5 of 12);
       margin-bottom: 0px;
@@ -33,28 +57,29 @@ Intro
     @include media($tablet-landscape) {
       @include vertical-center;
       margin-left: 50%;
+      @include rem(margin-top, -40px);
     }
   }
 
   li{
     counter-increment: step-counter;
-    display: inline-block;
+    display: flex;
     @include rem(margin-top, 30px);
-    width: 100%;
     @include s-small;
+    width: 100%;
 
    &:before{
       border-radius: 20em;
       border: 1px solid $grey-base;
       content: counter(step-counter);
       color: $grey-base;
-      display: inline-block;
-      height: 40px;
-      @include rem(margin, -8px 15px 0 0);
-      line-height: 2.4;
-      text-align: center;
-      width: 40px;
+      display: inline-table;
       float: left;
+      height: 30px;
+      @include rem(margin, -4px 15px 0 0);
+      line-height: 2;
+      text-align: center;
+      width: 30px;
     }
   }
 }
@@ -66,56 +91,40 @@ About
   position: relative;
 
   @include media($tablet){
-    @include rem(margin, 0px 30px);
     height: 500px;
+    @include rem(margin, 0px 30px);
   }
-}
 
-.about-text{
-  background-color: $white-dark;
-  position: relative;
-  @include rem(padding, 30px 20px);
-
-  @include media($tablet){
-    @include rem(padding, 70px);
-    width: 50%;
-    float: left;
-    height: 100%;
-  }
-}
-
-.image-block{
-  background: url('../../images/holding-plate.jpg') center no-repeat;
-  background-size: cover;
-  height: 300px;
-  width: 100%;
-
-  @include media($tablet){
-    float: left;
-    height: 100%;
-    width: 50%;
+  .image-block{
+    background: url('../../images/holding-plate.jpg') center no-repeat;
+    background-size: cover;
   }
 }
 
 .text-block{
+  background-color: $white-dark;
+  @include rem(padding, 30px 20px);
+  position: relative;
+
   @include media($tablet){
-    @include vertical-horizontal-center;
-    width: 75%;
+    float: left;
+    height: 100%;
+    @include rem(padding, 70px);
+    width: 60%;
+  }
+
+  @include media($tablet-landscape) {
+    width: 50%;
   }
 }
-
 
 /*-----------------------
 Testimonials
 -----------------------*/
-.testimonial-container{
-
-}
-
 blockquote{
-  @include s-medium;
   font-weight: $light;
   @include rem(margin-bottom, 20px);
+  @include s-medium;
   line-height: normal;
   position: relative;
 
@@ -127,12 +136,12 @@ blockquote{
   }
 
   &:before{
+    color: $white-dark;
     content: "\201C";
     display: block;
     font-family: Georgia;
     @include position(absolute, -45px null null -30px);
     @include s-giga;
-    color: $white-dark;
     z-index: -1;
   }
 }
@@ -140,6 +149,10 @@ blockquote{
 cite{
    @include center;
    text-align: center;
+
+   .cite-block{
+     display: inline-block;
+   }
 
   .headshot{
     border-radius: 50%;
@@ -151,55 +164,54 @@ cite{
 
   p{
     display: inline-block;
-    text-align: left;
     @include rem(margin-top, 8px);
+    text-align: left;
   }
 }
 
-.cite-block{
-  display: inline-block;
-}
+
 
 /*-----------------------
 Pricing
 -----------------------*/
 .pricing-blocks{
+
+  .image-block{
+    background: url('../../images/pouring-can.jpg') center no-repeat;
+    background-size: cover;
+  }
+
   li{
-    //counter-increment: step-counter;
-    display: inline-block;
+    display: flex;
     @include rem(margin-top, 20px);
     width: 100%;
     @include s-small;
 
    &:before{
+      background: url('../../images/checkmark.svg') center no-repeat;
+      background-size: 14px;
       border-radius: 20em;
       border: 1px solid $grey-base;
-      content: "\2713";
       color: $grey-base;
-      display: inline-block;
+      content: "";
+      display: inline-table;
       height: 30px;
-      @include rem(margin, -8px 15px 0 0);
+      float: left;
+      @include rem(margin, -4px 15px 0 0);
       line-height: 1.8;
       text-align: center;
       width: 30px;
-      float: left;
-      margin-top: -4px;
     }
   }
-}
 
-
-.pricing-blocks{
-  .image-block{
-    background: url('../../images/pouring-can.jpg') center no-repeat;
-    background-size: cover;
+  h4 span{
+    @include s-base;
+    @include rem(margin-bottom, 20px);
+    letter-spacing: normal;
   }
 }
 
-h2 span{
-  @include s-base;
-  letter-spacing: normal;
-}
+
 /*-----------------------
 Contact
 -----------------------*/
