--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -19,6 +19,7 @@ title: Recipeasy
       <li>Choose your recipes and one of our layouts.</li>
       <li>Go pour yourself a glass of wine and relax.</li>
     </ol>
+    <a href="mailto:recipeasybooks@gmail.com" class="button-primary">Contact Us</a>
   </div>
 </section>
 
