--- a/source/stylesheets/components/_buttons.scss
+++ b/source/stylesheets/components/_buttons.scss
@@ -13,6 +13,7 @@
   letter-spacing: 1px;
   line-height: normal;
   min-width: 180px;
+  text-align: center;
   text-transform: uppercase;
 
   text{
