--- a/source/stylesheets/pages/_home.scss
+++ b/source/stylesheets/pages/_home.scss
@@ -64,7 +64,7 @@ Intro
   li{
     counter-increment: step-counter;
     display: flex;
-    @include rem(margin-top, 30px);
+    @include rem(margin-bottom, 20px);
     @include s-small;
     width: 100%;
 
