--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -6,7 +6,9 @@ title: Recipeasy
 <header class="page-header">
   <div class="header-text">
     <h1>Cross “Create an E-Book” off your to-do list</h1>
-    <a href="#intro" class="button-primary scroll-link">Get Started</a>
+    <a href="#intro" id="ga-get-started" class="button-primary scroll-link">
+      Get Started
+    </a>
   </div>
 </header>
 
@@ -19,7 +21,9 @@ title: Recipeasy
       <li>Choose your recipes and one of our layouts.</li>
       <li>Go pour yourself a glass of wine and relax.</li>
     </ol>
-    <a href="mailto:recipeasybooks@gmail.com" class="button-primary">Contact Us</a>
+    <a href="mailto:recipeasybooks@gmail.com" id="ga-contact-us-1" class="button-primary">
+      Contact Us
+    </a>
   </div>
 </section>
 
@@ -66,5 +70,7 @@ title: Recipeasy
 <section class="contact-container" id="contact">
   <h2 class="centered-header">Let’s get this dinner party started</h2>
   <p>Contact us to schedule a quick call. Email <a href="mailto:recipeasybooks@gmail.com">recipeasybooks@gmail.com.</a></p>
-  <a href="mailto:recipeasybooks@gmail.com" class="button-primary">Contact Us</a>
+  <a href="mailto:recipeasybooks@gmail.com" id="ga-contact-us-2" class="button-primary">
+    Contact Us
+  </a>
 </section>
