--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -60,7 +60,7 @@ title: Recipeasy
         <li>Cover, Table of Contents, and an About page</li>
         <li>Full control of content (recipes, order, etc.)</li>
         <li>Your brand’s logo, colors, and fonts</li>
-        <li>1 revision on content to meet your tastes</li>
+        <li>One revision on content to meet your tastes</li>
       </ul>
     </div>
   </div>
