--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -4,7 +4,7 @@ title: Recipeasy
 
 <header class="page-header">
   <div class="header-text">
-    <h1>Cross “Create an E-Book” off your to-do list</h1>
+    <h1>Cross 'Create an E-Book' off your to-do list</h1>
     <a href="#intro" id="ga-get-started" class="button-primary scroll-link">
       Get Started
     </a>
