--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -6,7 +6,7 @@ title: Recipeasy
   <div class="header-text">
     <h1>Cross 'Create an E-Book' off your to-do list</h1>
     <a href="#intro" id="ga-get-started" class="button-primary scroll-link">
-      Get Started
+      Let's Go
     </a>
   </div>
 </header>
