Add form details

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -73,3 +73,13 @@ title: Recipeasy
     Contact Us
   </a>
 </section>
+
+<div>
+  <form action="https://formspree.io/recipeasybooks@gmail.com" method="POST">
+    <input type="text" name="name" placholder="First and last name">
+    <input type="email" name="email" placholder="Email address">
+    <input type="text" name="blog_name" placeholder="Name of your blog">
+    <input type="textarea" name="message" placeholder="Any comments or questions you have">
+    <input type="submit" value="Send">
+  </form>
+</div>
