--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -74,7 +74,7 @@ title: Recipeasy
   </a>
 </section>
 
-<div>
+<div style="display: none;">
   <form action="https://formspree.io/recipeasybooks@gmail.com" method="POST">
     <input type="text" name="name" placholder="First and last name">
     <input type="email" name="email" placholder="Email address">
