contact form styled, also added instagram to footer

--- a/source/partials/_footer.html.erb
+++ b/source/partials/_footer.html.erb
@@ -2,10 +2,11 @@
   <div class="footer-container">
     <div class="social-media">
       <li><a href="https://twitter.com/recipeasybooks" target="_blank"><i class="twitter-small"></i></a></li>
-      <!--<li><a href="#"><i class="pinterest-small" target="_blank"></i></a></li>-->
+      <!--<li><a href="https://www.pinterest.com/recipeasy0154/"><i class="pinterest-small" target="_blank"></i></a></li>-->
+      <li><a href="https://www.instagram.com/recipeasybooks/"><i class="instagram-small" target="_blank"></i></a></li>
       <li><a href="mailto:recipeasybooks@gmail.com"><i class="email-small"></i></a></li>
     </div>
     <p>©<%= Time.now.year %> Recipeasy. All Rights Reserved.</p>
-    <p><em>A LaunchPad Lab Product.</em></p>
+    <p><em>A<a href="launchpadlab.com" target="_blank"> LaunchPad Lab</a> Product.</em></p>
   </div>
 </footer>
