--- a/source/stylesheets/application.scss
+++ b/source/stylesheets/application.scss
@@ -19,7 +19,8 @@
 @import "components/footer";
 @import "components/navigation";
 @import "components/page-header";
-//@import "components/modal";
+@import "components/modal";
+@import "components/forms";
 
 // Page Styles
 @import "pages/home";
