--- a/source/stylesheets/components/_forms.scss
+++ b/source/stylesheets/components/_forms.scss
@@ -3,10 +3,10 @@
 
 // Labels
 label{
-  @include font-type($secondary-sans-serif-bold, normal, 700);
-  //@include rem(margin, 20px 0 4px);
-  @include s-base;
-  //display: block;
+  //@include font-type($secondary-sans-serif-bold, normal, 700);
+  @include rem(margin, 20px 0 4px);
+  @include s-small;
+  display: block;
   //text-transform: uppercase;
 }
 
@@ -15,21 +15,16 @@ label{
 select,
 textarea{
   @include appearance(none);
-  @include font-type($secondary-sans-serif-reg, normal, 300);
+  //@include font-type($secondary-sans-serif-reg, normal, 300);
   //@include placeholder{ font-style: italic; }
   @include s-base;
   border: 1px solid $white-med;
   border-radius: 1px;
   box-sizing: border-box;
   //height: 40px;
-  padding: 8px 0;
+  @include rem(padding, 8px);
   width: 100%;
   -webkit-font-smoothing: antialiased;
-
- &.newsletter { height: 40px; }
- .modal &{
-    padding: 19px 40px 15px;
-  }
 
   &:focus{
     @include box-shadow(0 0 0, transparent);
@@ -41,24 +36,13 @@ textarea{
 textarea,
 textarea[type="text"]{ height: 100px; @include rem(margin-bottom, 12px); }
 
-input[type="submit"]{
-  @include s-small;
-  border: none;
+.half-fields{
+  display: inline-block;
+  width: 100%;
 
-  &:hover{ cursor: pointer; }
-}
-
-.newsletter-block {
-
-  h5 { color: $cream-base; @include rem(margin-bottom, 0); }
-
-  #{$all-text-inputs} {
-    background-color: transparent;
-    border: none;
-    border-bottom: 1px solid $cream-base;
-    color: $cream-base;
-
-    @include placeholder{ color: $cream-base; }
+  .half-field{
+    @include media($tablet){
+      @include span-columns(6 of 12);
+    }
   }
 }
-
