--- a/source/stylesheets/pages/_home.scss
+++ b/source/stylesheets/pages/_home.scss
@@ -220,3 +220,9 @@ Contact
   h2{ @include rem(margin-bottom, 30px); }
   a{ @include rem(margin-top, 30px); }
 }
+
+.modal-inner{
+  h3{
+    @include rem(padding-right, 40px);
+  }
+}
