Post form to new tab

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -6,7 +6,7 @@ title: Recipeasy
   <div class="header-text">
     <h1>Cross 'Create an E-Book' off your to-do list</h1>
     <a href="#intro" id="ga-get-started" class="button-primary scroll-link">
-      Let's Go
+      Get Started
     </a>
   </div>
 </header>
@@ -81,7 +81,7 @@ title: Recipeasy
       <div class="modal-close" for="modal-1">&times;</div>
       <div class="modal-content">
         <h3>Send us a Message!</h3>
-        <form action="https://formspree.io/recipeasybooks@gmail.com" method="POST">
+        <form action="https://formspree.io/recipeasybooks@gmail.com" method="POST" target="_blank">
         <div class="half-fields">
             <div class="field half-field">
               <label>Name</label>
@@ -100,7 +100,7 @@ title: Recipeasy
               <label>How can we help?</label>
               <textarea type="text" name="message" required></textarea>
             </div>
-            <input type="submit" value="Send" class="button-primary">
+            <input type="submit" id="form-submit" value="Send" class="button-primary">
         </form>
       </div>
     </div>
