--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -97,7 +97,7 @@ title: Recipeasy
               <input type="text" name="blog_name">
             </div>
             <div class="field">
-              <label>How can we help?</label>
+              <label>How can we help you?</label>
               <textarea type="text" name="message" required></textarea>
             </div>
             <input type="submit" id="form-submit" value="Send" class="button-primary">
