--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -53,8 +53,7 @@ title: Recipeasy
   <div class="image-block"></div>
   <div class="text-block">
     <div class="text-block-content">
-      <h2>Simple Pricing</h2>
-      <h4>$59 <span>/ Setup + $1 per recipe</span></h4>
+      <h2>Simple, Efficient Design</h2>
       <ul>
         <li>Choice of portrait or landscape layout</li>
         <li>Cover, Table of Contents, and an About page</li>
