Add affiliate program page, copy, and links

--- a/source/stylesheets/application.scss
+++ b/source/stylesheets/application.scss
@@ -19,6 +19,7 @@
 @import "components/footer";
 @import "components/navigation";
 @import "components/page-header";
+@import "components/affiliate-info";
 @import "components/modal";
 @import "components/forms";
 
