--- a/source/affiliate.html.erb
+++ b/source/affiliate.html.erb
@@ -29,7 +29,7 @@ subtitle: Affiliate
     <br>
     <br>
     <h3>How much do you earn?</h3>
-    <p><strong>For every new customer that purchases an eCookbook from us through your link, we will send $20 your way.</strong> For clarity sake, you will not be compensating for returning customer purchases, just their initial eCookbook purchase.</p>
+    <p><strong>For every new customer that purchases an eCookbook from us through your link, we will send $20 your way.</strong> For clarity sake, you will not be compensated for returning customer purchases, just their initial eCookbook purchase.</p>
   </div>
 </header>
 
