--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -65,6 +65,40 @@ title: Recipeasy
   </div>
 </section>
 
+<section class="books-container" id="collection">
+  <h2 class="centered-header">A Collection of Delicious Goodness</h2>
+  <p>Join your fellow food bloggers in creating awesome e-recipe books for their followers.</p>
+  <ul class="books-block">
+    <li>
+      <img src="images/Beckys_Best_Cover.png">
+      <a href="http://www.beckysbestbites.com/" class="link-black-base" target="_blank">Visit Their Blog</a>
+    </li>
+    <li>
+      <img src="images/Cake_N_Knife_Cover.png">
+      <a href="http://www.cakenknife.com/" class="link-black-base" target="_blank">Visit Their Blog</a>
+    </li>
+    <li>
+      <img src="images/Sizzlin_Skillets_Cover.png">
+      <a href="http://www.thecookierookie.com/" class="link-black-base" target="_blank">Visit Their Blog</a>
+    </li>
+    <li>
+      <img src="images/Skinny_Chick_Bakes_Cover.png">
+      <a href="http://www.thatskinnychickcanbake.com/" class="link-black-base" target="_blank">Visit Their Blog</a>
+    </li>
+    <li>
+      <img src="images/Sugar_Cloth_Cover.png">
+      <a href="http://sugarandcloth.com/" class="link-black-base" target="_blank">Visit Their Blog</a>
+    </li>
+    <li>
+      <img src="images/teaser.png">
+      <label for="modal-1">
+        <p class="link-black-base" target="_blank">Make Yours Today!</p>
+      </label>
+    </li>
+  </ul>
+</section>
+
+<div class="grey-wrapper">
 <section class="contact-container" id="contact">
   <h2 class="centered-header">Let’s get this dinner party started</h2>
   <p>Contact us to schedule a quick call. Email <a href="mailto:recipeasybooks@gmail.com">recipeasybooks@gmail.com.</a></p>
@@ -72,7 +106,7 @@ title: Recipeasy
     <p class="button-primary">Contact Us</p>
   </label>
 </section>
-
+</div>
 <div class="modal">
   <input class="modal-state" id="modal-1" type="checkbox" />
   <div class="modal-fade-screen">
