--- a/source/partials/_navigation.html.erb
+++ b/source/partials/_navigation.html.erb
@@ -5,6 +5,7 @@
       <li><a class="scroll-link" href="#about">About</a></li>
       <li><a class="scroll-link" href="#testimonials">Testimonials</a></li>
       <li><a class="scroll-link" href="#pricing">Pricing</a></li>
+      <li><a class="scroll-link" href="#collection">Collection</a></li>
       <li><a class="scroll-link" href="#contact">Contact</a></li>
     </ul>
   </div>
