--- a/source/affiliate.html.erb
+++ b/source/affiliate.html.erb
@@ -1,6 +1,6 @@
 ---
-title: Affiliate
-subtitle: Affiliate
+title: Join our Affiliate Program
+subtitle: Affiliate Program
 ---
 <script src="https://cdn.jsdelivr.net/clipboard.js/1.5.12/clipboard.min.js"></script>
 
