--- a/source/stylesheets/components/_footer.scss
+++ b/source/stylesheets/components/_footer.scss
@@ -3,6 +3,7 @@ Footer
 -----------------------*/
 .page-footer {
   background-color: $grey-dark;
+  clear: both;
   text-align: center;
 
   .footer-container{
