--- a/source/partials/_navigation.html.erb
+++ b/source/partials/_navigation.html.erb
@@ -1,6 +1,8 @@
 <nav class="navigation">
   <div class="navigation-container">
-    <img src="images/logo.svg" class="logo">
+    <a href="/">
+      <img src="images/logo.svg" class="logo">
+    </a>
     <ul class="navigation-menu">
       <li><a class="scroll-link" href="#about">About</a></li>
       <li><a class="scroll-link" href="#testimonials">Testimonials</a></li>
