Add pricing back

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -56,7 +56,8 @@ title: Recipeasy
   <div class="image-block"></div>
   <div class="text-block">
     <div class="text-block-content">
-      <h2>Simple, Efficient Design</h2>
+      <h2>Simple Pricing</h2>
+      <h4>$70 <span>/ Setup + $1 per recipe</span></h4>
       <ul>
         <li>Choice of portrait or landscape layout</li>
         <li>Cover, Table of Contents, and an About page</li>
