--- a/source/affiliate.html.erb
+++ b/source/affiliate.html.erb
@@ -7,7 +7,7 @@ subtitle: Affiliate Program
 
 <header class="page-header affiliates">
   <div class="header-text">
-    <h1>Join our Exclusive Affiliate Program</h1>
+    <h1>Join our Affiliate Program</h1>
   </div>
 </header>
 
