update form to blog url

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -130,8 +130,8 @@ title: Recipeasy
             </div>
             </div>
             <div class="field">
-              <label>Name of your Blog</label>
-              <input type="text" name="blog_name">
+              <label>URL of your Blog</label>
+              <input type="text" name="blog_url">
             </div>
             <br>
             <input type="hidden" id="affiliate-lead" name="affiliate_lead" value="">
