add google verification

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -19,6 +19,7 @@
       ga('create', 'UA-73667700-1', 'auto');
       ga('send', 'pageview');
     </script>
+    <meta name="google-site-verification" content="S59i3ChLMdT8TuHf66LGQ9U5Ol7R_FhClSdcON8uKpA" />
   </head>
 
   <body class="<%= page_classes %>">
